deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-world
  labels:
    app: go-hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-hello-world
  template:
    metadata:
      labels:
        app: go-hello-world
    spec:
      containers:
      - name: go-hello-world
        image: arpitsrivastava529/go-hello-world:latest
        volumeMounts:
        - name: db-connection
          mountPath: /main
        ports:
        - containerPort: 8000
      volumes:
      - name: db-connection
        configMap: 
          name: test-cm
