service.yml
apiVersion: v1
apiVersion: v1
kind: Service
metadata:
  name: go-hello-world
spec:
  type: LoadBalancer
  selector:
    app: go-hello-world
  ports:
    - port: 80 
      targetPort: 8000
      nodePort: 30007
